<resources>
    <string name="app_name">(MNCH) Services Project in District Dadu, Pakistan</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٽرويو شروع ڪريو </string>
    <string name="nextSection"> اڳيون سيڪشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus"> انٽرويو جو نتيجو</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="secALabel">A: BASIC INFORMATION</string>
    <string name="secBLabel">B: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="secCLabel">C: گھر جي سماجي ۽ اقتصادي معلومات </string>
    <string name="secDLabel">D: REPRODUCTIVE HEALTH, MATERNAL AND CHILD MORTALITY (Complete this section  for all married aged 15–49 years in the household)</string>
    <string name="secELabel">E: Deceased Mother Information</string>
    <string name="secFLabel">F: Deceased Child Information</string>
    <string name="secGLabel">G: Access to LHWs </string>
    <string name="secHALabel">(HA: ٻار جي صحت(دستن جي بيماري جي باري ۾</string>
    <string name="secHBLabel">HB: ٻار جي صحت(ساھ کڻڻ ۾ تڪليف)</string>
    <string name="secILabel">I: حفاظتي ٽڪن جي معلومات</string>
    <string name="secJLabel">J: BREAST FEEDING AND NUTRITION </string>
    <string name="secKLabel">K: پاڻي ۽ صفائي</string>
    <string name="secLLabel">L: ھٿ ڌوئڻ</string>
    <string name="secMLabel">M: WASH (Spot Check) </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="male"> مرد</string>
    <string name="female"> عورت </string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="dkn"> خبر نه آھي </string>
    <string name="na"> لاڳو نه ٿو ٿئي </string>
    <string name="day"> ڏينهن </string>
    <string name="month"> مهينو </string>
    <string name="year"> سال </string>
    <string name="hour"> ڪلاڪ </string>
    <string name="min"> منٽ </string>
    <string name="other"> ٻيو ڪو وضاحت ڪريو. </string>
    <string name="name">ٻار جو نالو</string>
    <string name="none">ڪجهه به نه</string>
    <string name="RA">  </string>
    <string name="hhno"> گھر نمبر </string>
    <string name="wname"> عورت جو نالو </string>
    <string name="age"> عورت جي عمر (سالن ۾) </string>
    <string name="hname"> مڙس جو نالو </string>
    <string name="hhname"> گهر جي سربراه جو نالو </string>
    <string name="ra06"> يونين ڪائونسل (ڪوڊ) </string>
    <string name="ra07"> ڳوٺ جو نالو/ڪوڊ </string>
    <string name="lhvname"> ايل ايڇ وي جو نالو </string>
    <string name="pwid"> PW-ID </string>
    <string name="FormDate"> انٽرويو جي تاريخ </string>
    <string name="ra10"> ٽرائيميسٽر / حمل جا مهينا </string>
    <string name="ra0901"> پهريون </string>
    <string name="ra0902"> ٻيون </string>
    <string name="ra0903"> ٽيون </string>
    <string name="ra11"> گذريل حملن جو تعداد </string>
    <string name="istatus"> ڇا حاملا عورت انٽرويو لاءِ موجود هئي؟ </string>
    <string name="istatusa"> موجود هئي </string>
    <string name="istatusb"> هن وقت اسپتال ۾ آهي </string>
    <string name="istatusc"> وقتي طور غير موجود آهي </string>
    <string name="istatusd"> مري چڪي آهي </string>
    <string name="istatuse"> هميشه لاءِ لڏي ويا </string>
    <string name="istatusf"> وقتي طور انڪار ڪيو </string>
    <string name="istatusg"> رضامند نه هجڻ </string>
    <string name="istatush"> دورو نه ٿي سگهي </string>
    <string name="istatusi"> سبب ڄاڻايو </string>
    <string name="RB"> حصو ٻيون: گذريل حمل يا دائڪي ڄاڻ </string>
    <string name="rb01"> پهرين حمل وقت عمر </string>
    <string name="rb03"> ٻار ضايع ٿيڻ جي ڄاڻَ </string>
    <string name="rb03n"> جيڪڏهن ها ته ٻار ضايع ٿيڻ جو تعداد </string>
    <string name="rb04"> مئل ٻارن ڄمڻ جي ڄاڻ </string>
    <string name="rb04n"> جيڪڏهن ها ته مئل ٻارن جو تعداد </string>
    <string name="rb05n"> زنده ٻارن جو تعداد </string>
    <string name="rb06"> گذريل حمل جي دوران حمل جو بنيادي چڪاسون ڪرايون؟ </string>
    <string name="rb07"> جڏهن توهان حمل جي دوران چڪاس لاءِ ويا ته توهان کي حمل جو ڪائون مهينو هيو؟ </string>
    <string name="rb07m"> مهينا </string>
    <string name="rb0799"> خبر ناهي </string>
    <string name="rb08"> گھڻا دفعا توهان حمل جي بنيادي چڪاس ڪرائي؟ </string>
    <string name="rb08n"> تعداد </string>
    <string name="rb0899"> خبر ناهي </string>
    <string name="rb09"> توهان جي گذريل حمل جي سارسنڀال دوران توهان کي هِنن مان به ڪا دوا ڏني وئي؟ هڪ کان وڌيڪ جواب اچي سگهن ٿا. </string>
    <string name="rb09vd"> Vitamin D </string>
    <string name="rb09i"> Iron </string>
    <string name="rb09fa"> Folic acid </string>
    <string name="rb09m"> Micronutrient </string>
    <string name="rb09c"> Calcium </string>
    <string name="rb10"> ڇا توهان جي گذريل حمل جي دوران توهان جي ٻانهن ۾ سُئي هنئي وئي ٻار کي جھٽڪي کان بچڻ جي لاءِ </string>
    <string name="rb11"> جيڪڏهن ها، ته توهان کي جھٽڪن کان بچاءُ واري انجيڪشن گھڻا دفعا لڳائي وئي </string>
    <string name="rb11a"> هڪ </string>
    <string name="rb11b"> ٻه </string>
    <string name="rb11c"> ٽي </string>
    <string name="rb11d"> چار </string>
    <string name="rb11e"> پنج </string>
    <string name="rb12"> گذريل حمل جو نتيجو ڇا نڪتو </string>
    <string name="rb12a"> ٻار ضايع ٿي ويو </string>
    <string name="rb12b"> ٻار مئل ڄائو </string>
    <string name="rb12c"> زنده پيدائش </string>
    <string name="rb12d"> ٻار ضايع ڪيو ويو </string>
    <string name="rb12e"> ٻن جاڙن ٻارن جي زنده پيدائش </string>
    <string name="rb12f"> هڪ جيئرو ۽ هڪ مئل ٻار جي پيدائش </string>
    <string name="rb13"> توهان جو گذريل ويم ڪٿي ٿيو؟ </string>
    <string name="rb13a"> سرڪاري اسپتال (تعلقه/ضلع هيڊ ڪواٽر </string>
    <string name="rb13b"> آر ايڇ سي/بي ايڇ </string>
    <string name="rb13c"> پرائيويٽ ڪلينڪ/ميٽرنٽي هوم/اسپتال </string>
    <string name="rb13d"> گھر </string>
    <string name="rb14"> جيڪڏهن ويم گهر ۾ ٿيو ته ڪنهن ڪرايو </string>
    <string name="rb14a"> ٽي بي اي </string>
    <string name="rb14b"> نرس/ مڊ وائيف </string>
    <string name="rb14c"> خاندان جي وڏي </string>
    <string name="rb14d"> ڪنهن به نه ڪرايو </string>
    <string name="rb15"> ويم اسپتال ۾ ٿيڻ جي صورت ۾ توهان کي ٻار ڪنهن ڄڻايو </string>
    <string name="rb15a"> ايل ايڇ وي/نرس/ مڊ وائيف </string>
    <string name="rb15b"> ايل ايڇ ڊبليو </string>
    <string name="rb15c"> ڊاڪٽر </string>
    <string name="rb16"> اوهان جي ٻار جو ڄمڻ وقت وزن ڪيترو هئو </string>
    <string name="rb16kg"> ڪلو </string>
    <string name="rb16g"> گرام </string>
    <string name="rb17"> گذريل ويمَ دوران ڇا توهان کي ڪا ڏکيائي پيش آئي </string>
    <string name="rb18"> جيڪڏهن ها ته گذريل ويم جي جي دوران ڪهڙي قسم جون ڏکيائيون پيش آيون </string>
    <string name="rb18a"> ٻچيداني مان مسلسل خون اچڻ </string>
    <string name="rb18b"> جھٽڪا </string>
    <string name="rb18c"> ٻچيداني کي ڪَٽ اچڻ </string>
    <string name="rb18d"> بيهوش ٿيڻ </string>
    <string name="rb18e"> حمل دوران شگر </string>
    <string name="rb18f"> وقت کان پهريان ويم </string>
    <string name="rb19"> ڇا ڪو صحت مهيا ڪندڙ نمائندو مثال طور ايل ايڇ وي /نرس/ايل ايڇ ڊبليو/ڊاڪٽر سارسنڀال لاءِ توهان جي گهر آيو ستن ڏينهن جي اندر </string>
    <string name="RC"> حصو ٽيو: موجوده حمل جي ڄاڻ </string>
    <string name="rc01"> آخري ماهواريءَ جي تاريخ؟ آخري ماهواريءَ جي مدت جو پهريون ڏينهن </string>
    <string name="rc02"> هن وقت موجوده حمل جي عمر. (ماهواري جي پهرين ڏينهن کان اڄ تائين </string>
    <string name="rc02w"> هفتا </string>
    <string name="rc02d"> ڏينهن </string>
    <string name="rc03"> ويم جي متوقع تاريخ </string>
    <string name="rc04"> هن حمل کي يقيني بڻائڻ لاءِ ڇا توهان ڪي ٽيسٽون ڪرايو آهن </string>
    <string name="rc05"> جيڪڏهن ها ته ڇا هيٺين ٽيسٽن مان ڪا ٽيسٽ ڪئي وئي؟ </string>
    <string name="rc05a"> پيشاب جي ٽيسٽ </string>
    <string name="rc05b"> الٽراسائونڊ </string>
    <string name="rc05c"> رت جي ٽيسٽ </string>
    <string name="rc06"> ڇا توهان موجوده حمل جي دوران ڪنهن صحت مرڪز ڏانهن ويئو </string>
    <string name="rc07"> جيڪڏهن ها ته دوري ڪرڻ جو ڪهڙو سبب هيو </string>
    <string name="rc07a"> رت جي ڪمي جي ڪري </string>
    <string name="rc07b"> بلڊ پريشر وڌڻ جي ڪري </string>
    <string name="rc07c"> رت ۾ شگر وڌي وڃڻ جي ڪري </string>
    <string name="rc07d"> ٻچيداني مان رت اچڻ جي ڪري </string>
    <string name="rc08"> جيڪڏهن ها ته توهان گھڻا دفعا چيڪپ ڪرايو آهي. </string>
    <string name="rc08a"> هڪ دفعو </string>
    <string name="rc08b"> ٻه دفعا </string>
    <string name="rc08c"> ٽي دفعا </string>
    <string name="rc08d"> چار دفعا </string>
    <string name="rc08e"> چئن دفعن کان وڌيڪ </string>
    <string name="rc09"> هن حمل جي دوران توهان صحت مرڪز تي ويَئو ته اتي ڇا ڇا چيڪ ڪيو ويو </string>
    <string name="rc09w"> وزن </string>
    <string name="rc09bp"> بلڊ پريشر </string>
    <string name="rc09st"> شگر جي چڪاس </string>
    <string name="rc09ud"> پيشاب جي چڪاس </string>
    <string name="rc09hb"> رت جي چڪاس/ليول </string>
    <string name="rc09us"> الٽراسائونڊ </string>
    <string name="rc09ti"> جھٽڪن کان بچاءُ جي سئي ڏني وئي </string>
    <string name="rc10"> ڇا توهان هيٺ ڄاڻايل مسئلن جي لاءِ ڪنهن صحت ڪارڪن ڏي ويا هيو </string>
    <string name="rc10a"> حمل جي خطري جون نشانيون (رت جي ڪمي، بلڊ پريشر وڌڻ، شگر) </string>
    <string name="rc10b"> فولاد جو دوائون </string>
    <string name="rc10c"> ويم جي تياري </string>
    <string name="rc10d"> شروعاتي يا ابتدائي کير پيارڻ </string>
    <string name="rc10e"> صرف ۽ صرف ماءُ جو کير </string>
    <string name="dfbheading"> حصو ٻيون: ويم کان پوءِ جي سارسنڀال، ماءُ جي صحت جي ڪيفيت </string>
    <string name="dfb01"> آخري دوري کان وٺي توهان پنهنجي صحت کي ڪيئن ٿا ڏسو؟ </string>
    <string name="dfb01a"> تمام ڀلي </string>
    <string name="dfb01b"> وچ ٿري </string>
    <string name="dfb01c"> خراب </string>
    <string name="dfb02"> آخري دوري کان وٺي هيٺين مان ڪهڙيون مشڪلاتون پيش آيون؟ </string>
    <string name="dfb02a"> ٻچيداني مان خون اچڻ </string>
    <string name="dfb02b"> جھٽڪا </string>
    <string name="dfb02c"> سهڪو/ ساه ۾ مشڪلات </string>
    <string name="dfb02d"> بخار </string>
    <string name="dfb02e"> ڪمزوري </string>
    <string name="dfb02f"> شديد مٿي جو سور </string>
    <string name="dfb02g"> اکين جي اڳيان ترورا </string>
    <string name="dfb02h"> پِنيءَ ۾ سور/ڳاڙهاڻ يا سوڄ </string>
    <string name="dfb03"> مٿين پيچيدگين جي علاج لاءِ توهان ڪيڏانهن ويو؟ </string>
    <string name="dfb03a"> سرڪاري اسپتال (تعلقه/ضلع/بي ايڇ يو/ آر ايڇ سي) </string>
    <string name="dfb03b"> پرائيويٽ ڪلينڪ/پرائيويٽ اسپتال </string>
    <string name="dfb03c"> ڪنهن به صحت مرڪز نه ويا </string>
    <string name="dfb04"> جيڪڏهن مٿين مان ڪنهن صحت مرڪز تي ويا ته انهن توهان کي ڪنهن ٻئي صحت مرڪز ڏانهن موڪليو؟ </string>
    <string name="dfb05"> جيڪڏهن ها ته ڇا توهان اوڏهان ويا جيڏانهن توهان کي موڪليو ويو؟ </string>
    <string name="dfb06"> ويم کان پوءِ جي پيچيدگين جي سارسنڀال ڪنهن کان ڪرائي وئي؟ </string>
    <string name="dfb06a"> ايل ايڇ ڊبليو </string>
    <string name="dfb06b"> دائي/ٽي بي اي </string>
    <string name="dfb06c"> نرس </string>
    <string name="dfb06d"> خانگي ڊاڪٽر </string>
    <string name="dfb06e"> سرڪاري ڊاڪٽر </string>
    <string name="dfb06f"> علاج نه ورتو </string>
</resources>